...
            android:layout_alignParentBottom="true">
        <TextView android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:textColor="@color/colorPrimary"
                  android:id="@+id/separator"/>
        <EditText
                android:id="@+id/et_comment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Add a comment..."
                android:layout_below="@id/separator"
                android:inputType="textCapSentences"
                android:layout_marginEnd="@dimen/bottom_nav_height"/>
        <TextView
                android:id="@+id/iv_send_comment"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:text="Post"
                android:textStyle="bold"
...
