<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
                                       android:layout_width="match_parent"
                                       android:layout_height="@dimen/toolbar_height"
                                       android:background="@color/colorPrimary"
                                       app:elevation="0dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/iv_back"
                    android:src="@drawable/ic_white_back"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_centerInParent="true"
                      android:paddingEnd="@dimen/dimen_15dp"
                      android:gravity="center"
                      android:textStyle="bold"
                      android:textSize="20sp"
                      android:textColor="@color/white"
                      android:text="@string/app_name"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

</RelativeLayout>